AX: The isolated tree needs to fix-up table cell parent relationships https://bugs.webkit.org/show_bug.cgi?id=236156

Reviewed by Chris Fleizach.

Source/WebCore:

Tables are not very navigable by AX clients in isolated tree mode.
This is because our current representation of table elements doesn't
perfectly follow the normal parent-child relationship of other elements,
i.e. some non-row elements can return cells from children(), but the cells
must regard their row as the "real" parent.

We've had to work around this in the live tree in AccessibilityObject::insertChild, too:

https://github.com/WebKit/WebKit/blob/main/Source/WebCore/accessibility/AccessibilityObject.cpp#L626#L628

In this patch, when creating an isolated object, we override the "assumed" parent ID
to the correct parent ID for cell-like elements.

Test: accessibility/table-search-traversal.html

* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::parentIDForObject):
Added.
(WebCore::AXIsolatedTree::nodeChangeForObject):
Call parentIDForObject to determine the correct parent for the
to-be-created isolated object.
* accessibility/isolatedtree/AXIsolatedTree.h:

Tools:

Add AccessibilityUIElement::role implementation for use in new
accessibility/table-search-traversal.html test.

* DumpRenderTree/ios/AccessibilityUIElementIOS.mm:
(AccessibilityUIElement::role):
Added implementation.
* WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
(WTR::AccessibilityUIElement::role):
Added implementation.

LayoutTests:

Add test verifying the the new, more correct isolated tree behavior.

* platform/glib/TestExpectations:
* platform/win/TestExpectations:
Skip new accessibility/table-search-traversal.html test due to
missing AccessibilityUIElement::uiElementForSearchPredicate implementation.
* platform/ios/TestExpectations:
Enable new accessibility/table-search-traversal.html test.

* accessibility/table-search-traversal.html: Added.
* platform/ios/accessibility/table-search-traversal-expected.txt: Added.
* platform/mac/accessibility/table-search-traversal-expected.txt: Added.

* platform/ios/imported/blink/accessibility/link-inside-label-expected.txt:
This patch implements AccessibilityUIElement::role on iOS, which
changes this test's output (in a positive way).



Canonical link: https://commits.webkit.org/246922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289238 268f45cc-cd09-0410-ab3c-d52691b4dbfc